src/rust/items/snapshots/syn_state_machine__rust__items__generic_parameters__tests__concat_idents! (parse it_matches_const_param_bounded).snap
---
source: src/rust/items/generic_parameters.rs
expression: "crate::parse::<ConstParam<Ident>>(q.clone())"
---
Ok(
    ConstParam {
        id: Ident(
            HELLO,
        ),
        ty: Ident(
            i8,
        ),
        eq: Some(
            V1(
                Literal {
                    lit: 10,
                },
            ),
        ),
    },
)
