src/rust/items/snapshots/syn_state_machine__rust__items__generic_parameters__tests__concat_idents! (parse it_matches_simple_where).snap
---
source: src/rust/items/generic_parameters.rs
expression: "crate::parse::<WhereClause<Infallible, Ident>>(q.clone())"
---
Ok(
    WhereClause {
        content: Interlace {
            values: [
                Ty(
                    TypeBoundWhereClauseItem {
                        for_lts: None,
                        ty: Ident(
                            F,
                        ),
                        bound: Some(
                            MinLength(
                                Interlace {
                                    values: [
                                        Tr(
                                            TraitBound {
                                                q: false,
                                                for_lts: None,
                                                path: HigherOrderPath {
                                                    leading: false,
                                                    segments: Interlace {
                                                        values: [
                                                            Generic(
                                                                Id(
                                                                    Ident(
                                                                        Into,
                                                                    ),
                                                                ),
                                                                GenericArgs {
                                                                    args: Interlace {
                                                                        values: [
                                                                            Ty(
                                                                                Ident(
                                                                                    T,
                                                                                ),
                                                                            ),
                                                                        ],
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                },
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                    },
                ),
            ],
        },
    },
)
