src/rust/items/snapshots/syn_state_machine__rust__items__generic_parameters__tests__concat_idents! (parse it_matches_type_param).snap
---
source: src/rust/items/generic_parameters.rs
expression: "crate::parse::<TypeParam<Infallible, Infallible>>(q.clone())"
---
Ok(
    TypeParam {
        id: Ident(
            Hello,
        ),
        bound: None,
        ty: None,
    },
)
