src/rust/items/snapshots/syn_state_machine__rust__items__generic_parameters__tests__concat_idents! (parse it_matches_type_param_bounded).snap
---
source: src/rust/items/generic_parameters.rs
expression: "crate::parse::<TypeParam<Infallible, Infallible>>(q.clone())"
---
Ok(
    TypeParam {
        id: Ident(
            Hello,
        ),
        bound: Some(
            MinLength(
                Interlace {
                    values: [
                        Tr(
                            TraitBound {
                                q: false,
                                for_lts: None,
                                path: HigherOrderPath {
                                    leading: false,
                                    segments: Interlace {
                                        values: [
                                            Bare(
                                                Id(
                                                    Ident(
                                                        std,
                                                    ),
                                                ),
                                            ),
                                            Bare(
                                                Id(
                                                    Ident(
                                                        fmt,
                                                    ),
                                                ),
                                            ),
                                            Bare(
                                                Id(
                                                    Ident(
                                                        Debug,
                                                    ),
                                                ),
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            ),
        ),
        ty: None,
    },
)
