src/rust/items/snapshots/syn_state_machine__rust__items__generic_parameters__tests__it_matches_const_param_bounded.snap
---
source: src/rust/items/generic_parameters.rs
expression: "insta_match_test!(+ parse ConstParam<Ident> : const HELLO : i8 = 10)"
---
Ok(
    ConstParam {
        id: Ident(
            HELLO,
        ),
        ty: Ident(
            i8,
        ),
        eq: Some(
            V2(
                Literal {
                    lit: 10,
                },
            ),
        ),
    },
)
