src/rust/items/snapshots/syn_state_machine__rust__items__generic_parameters__tests__it_matches_simple_where_with_path.snap
---
source: src/rust/items/generic_parameters.rs
expression: "insta_match_test!(+ parse WhereClause<Infallible, Ident> : where F : std ::\n    ops :: Add)"
---
Ok(
    WhereClause {
        content: Interlace {
            values: [
                Ty(
                    TypeBoundWhereClauseItem {
                        for_lts: None,
                        ty: Ident(
                            F,
                        ),
                        bound: Some(
                            MinLength(
                                Interlace {
                                    values: [
                                        Tr(
                                            TraitBound {
                                                q: false,
                                                for_lts: None,
                                                path: HigherOrderPath {
                                                    leading: false,
                                                    segments: Interlace {
                                                        values: [
                                                            Bare(
                                                                Id(
                                                                    Ident(
                                                                        std,
                                                                    ),
                                                                ),
                                                            ),
                                                            Bare(
                                                                Id(
                                                                    Ident(
                                                                        ops,
                                                                    ),
                                                                ),
                                                            ),
                                                            Bare(
                                                                Id(
                                                                    Ident(
                                                                        Add,
                                                                    ),
                                                                ),
                                                            ),
                                                        ],
                                                    },
                                                },
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                    },
                ),
            ],
        },
    },
)
