src/rust/items/snapshots/syn_state_machine__rust__items__generic_parameters__tests__it_matches_type_param.snap
---
source: src/rust/items/generic_parameters.rs
expression: "insta_match_test!(+ parse TypeParam<Infallible, Infallible> : Hello)"
---
Ok(
    TypeParam {
        id: Ident(
            Hello,
        ),
        bound: None,
        ty: None,
    },
)
